# waken

./: .gitignore  README.md  index.html  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: README.md  adapter-ci-setup.md  api-spec.md  implementation-plan.md  name-research.md  prior-art.md
docs/adr/: 0001-core-architecture.md
docs/archive/: original-brief.md
examples/: README.md  broadcast.py  quickstart.py  scheduler.py  webhook.py
tests/: test_broadcast.py  test_cli.py  test_database.py  test_delivery.py  test_emit.py  test_events.py  test_exceptions.py  test_filesystem_source.py  test_notification_output.py  test_package.py  test_persistence.py  test_protocols.py  test_responses.py  test_retry.py  test_router.py  test_run_and_serve.py  test_runtime.py  test_scheduler.py  test_server.py  test_targets.py  test_terminal_output.py  test_webhook_source.py
waken/: __init__.py  cli.py  events.py  exceptions.py  persistence.py  protocols.py  responses.py  router.py  runtime.py  scheduler.py  server.py  targets.py
waken/plugins/: __init__.py
waken/plugins/outputs/: __init__.py  notification.py  terminal.py
waken/plugins/sources/: __init__.py  filesystem.py  http.py  webhook.py
waken/plugins/targets/: __init__.py
