[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "waken"
version = "0.1.0"
description = "A lightweight runtime that routes work from a Source to an interchangeable AI-agent Target and back through an Output."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Waken contributors" }]
keywords = ["ai", "agents", "router", "runtime"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "starlette>=0.40",
    "uvicorn>=0.30",
    "httpx>=0.27",
    "click>=8.1",
    "croniter>=2.0",
]

[project.urls]
Homepage = "https://github.com/waken-dev/waken"
Repository = "https://github.com/waken-dev/waken"
Issues = "https://github.com/waken-dev/waken/issues"
Documentation = "https://github.com/waken-dev/waken/tree/main/docs"

[project.scripts]
waken = "waken.cli:main"

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "types-croniter>=2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["waken"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["waken"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
