[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "waken"
version = "0.1.2"
description = "A lightweight runtime that routes work from a Source to an interchangeable AI-agent Target and back through an Output."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Waken contributors" }]
keywords = ["ai", "agents", "router", "runtime"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "starlette>=0.40",
    "uvicorn>=0.30",
    "httpx>=0.27",
    "click>=8.1",
    "croniter>=2.0",
]

[project.urls]
Homepage = "https://github.com/WakenHQ/waken"
Repository = "https://github.com/WakenHQ/waken"
Issues = "https://github.com/WakenHQ/waken/issues"
Documentation = "https://github.com/WakenHQ/waken/tree/main/docs"

[project.scripts]
waken = "waken.cli:main"

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "types-croniter>=2.0",
]
# Each extra below is pip metadata only: it installs the matching
# standalone waken-<adapter> package (see docs/adr/0001-core-architecture.md).
# `waken` itself never imports any of them.
claude = ["waken-claude>=0.1.0"]
gemini = ["waken-gemini>=0.1.0"]
copilot = ["waken-copilot>=0.1.0"]
openai = ["waken-openai>=0.1.0"]
mistral = ["waken-mistral>=0.1.0"]
cohere = ["waken-cohere>=0.1.0"]
groq = ["waken-groq>=0.1.0"]
bedrock = ["waken-bedrock>=0.1.0"]
ollama = ["waken-ollama>=0.1.0"]
voice = ["waken-voice>=0.2.0"]
slack = ["waken-slack>=0.1.0"]
telegram = ["waken-telegram>=0.1.0"]
all = [
    "waken-claude>=0.1.0",
    "waken-gemini>=0.1.0",
    "waken-copilot>=0.1.0",
    "waken-openai>=0.1.0",
    "waken-mistral>=0.1.0",
    "waken-cohere>=0.1.0",
    "waken-groq>=0.1.0",
    "waken-bedrock>=0.1.0",
    "waken-ollama>=0.1.0",
    "waken-voice>=0.2.0",
    "waken-slack>=0.1.0",
    "waken-telegram>=0.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["waken"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["waken"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
